--- a/web/css/graph/cytoscape.css
+++ b/web/css/graph/cytoscape.css
@@ -7,7 +7,7 @@
 
 #cy {
   position: absolute;
-  top: var(--toolbar-height);
+  top: 0;
   left: 0;
   right: 0;
   bottom: 0;
